@@ -1,3 +1,10 @@
+2009-10-05 Sarka Todorova <sarka.todorova@cern.ch>
+	* simplify constituent info for DetachedTV
+	* distinguish cutouts and overlaps
+	* don't simplify poorly scanned shapes
+        * fix span in blend material
+	* tagged as MuonTrackingGeometry-00-05-27
+
 2009-10-02 Sarka Todorova <sarka.todorova@cern.ch>
 	* adjust envelope size
 	* tagged as MuonTrackingGeometry-00-05-26
